--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,20 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules/)
 
 add_library(b6 STATIC Device.cc Device.hh Packet.cc Packet.hh Error.hh Enum.hh Device.cc Packet.cc)
 
-find_package(libusb-1.0)
-if (LIBUSB_1_FOUND)
-    include_directories(${LIBUSB_1_INCLUDE_DIRS})
-    target_link_libraries(b6 ${LIBUSB_1_LIBRARIES})
-endif(LIBUSB_1_FOUND)
+# Directly set the include directory for libusb
+include_directories(C:/Users/joshl/Documents/VS_projects/LiIon_charger_interface/libusb-1.0.27/include)
+
+# Find the libusb libraries. Adjust the path as necessary to point to where the libusb libraries are located.
+find_library(LIBUSB_LIBRARY
+             NAMES libusb-1.0 usb-1.0
+             PATHS C:/Users/joshl/Documents/VS_projects/LiIon_charger_interface/libusb-1.0.27/VS2022/MS64/dll)
+if(NOT LIBUSB_LIBRARY)
+    message(FATAL_ERROR "libusb library not found")
+else()
+    message(STATUS "libusb found: ${LIBUSB_LIBRARY}")
+endif()
+
+target_link_libraries(b6 ${LIBUSB_LIBRARY})
 
 install(TARGETS b6 DESTINATION lib)
 install(FILES Device.hh Packet.hh Error.hh Enum.hh DESTINATION include/b6)
